--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,9 +1,12 @@
 <div class="card">
   <div class="card-header">
-    <h4><%= board.title %></h4>
+    <h4><%= @board.title %></h4>
+    <% @board.tags.each do |tag| %>
+      <div class="badge-primary"><%= tag.name %></div>
+    <% end %>
   </div>
   <div class="card-body">
-    <p class="card-text"><%= simple_format(board.body) %></p>
-    <p class="text-right font-weight-bold mr-10"><%= board.author_name %></p>
+    <p class="card-text"><%= simple_format(@board.body) %></p>
+    <p class="text-right font-weight-bold mr-10"><%= @board.author_name %></p>
   </div>
 </div>
