--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,15 +1,28 @@
-<%= form_with model: board do |form| %>
+<%= form_with model: @board, local: true, data: { turbo: false } do |f| %>
+  <% render 'shared/error_messages', object: f.object %>
   <div class="mb-3">
-    <%= form.label :auther_name, '名前' %>
-    <%= form.text_field :author_name, class: 'form-control'%>
+    <%= f.label :auther_name, '名前' %>
+    <%= f.text_field :author_name, class: 'form-control'%>
   </div>
   <div class="mb-3">
-    <%= form.label :auther_name, 'タイトル' %>
-    <%= form.text_field :title, class: 'form-control'%>
+    <%= f.label :auther_name, 'タイトル' %>
+    <%= f.text_field :title, class: 'form-control'%>
   </div>
   <div class="mb-3">
-    <%= form.label :body, '本文' %>
-    <%= form.text_area :body, class: 'form-control', rows: 10%>
+    <%= f.label :body, '本文' %>
+    <%= f.text_area :body, class: 'form-control', rows: 10%>
   </div>
-  <%= form.submit '保存', class: 'btn btn primary' %>
+  <div class="form-group">
+    <span>タグ</span>
+    <%= f.collection_check_boxes(:tag_ids, Tag.all, :id, :name) do |tag| %>
+      <div class="form-check">
+        <%= tag.label class: 'form-check-label' do %>
+          <%= tag.check_box class: 'form-check-input' %>
+          <%= tag.text %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+
+  <%= f.submit '保存', class: 'btn btn primary' %>
 <% end %>
